--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         function onYouTubeIframeAPIReady() {
             player = new YT.Player('player', {
                 height: '0', width: '0',
-                videoId: 'dQw4w9WgXcQ', // REPLACE WITH YOUR SONG ID
-                playerVars: { 'autoplay': 1, 'loop': 1, 'playlist': 'dQw4w9WgXcQ' }
+                videoId: 'ZSfVtcHpgTQ', // REPLACE WITH YOUR SONG ID
+                playerVars: { 'autoplay': 1, 'loop': 1, 'playlist': 'ZSfVtcHpgTQ' }
             });
         }
 
