--- a/index.html
+++ b/index.html
@@ -43,8 +43,20 @@
             
             <div class="photo-frame" id="slideshow">
                 <img src="cutie.png" class="active">
-                <img src="pic2.png"> 
-                <img src="pic3.png">
+                <img src="IMG_0004.JPG"> 
+                <img src="IMG_0659.HEIC">
+                <img src="IMG_1447.JPG">
+                <img src="IMG_2030.HEIC">
+                <img src="IMG_2343.HEIC">
+                <img src="IMG_3278.HEIC">
+                <img src="IMG_5893.HEIC">
+                <img src="IMG_6823.HEIC">
+                <img src="IMG_7223.HEIC">
+                <img src="IMG_7472.HEIC">
+                <img src="IMG_7655.HEIC">
+                <img src="IMG_7882.HEIC">
+                <img src="IMG_8262.HEIC">
+                
             </div>
 
             <div class="reasons-container">
