--- a/index.html
+++ b/index.html
@@ -60,11 +60,29 @@
             </div>
 
             <div class="reasons-container">
-                <h3 style="margin-top:0">22 Reasons Why I Love You ❤️</h3>
+                <h3 style="margin-top:0">22 Reasons Why You are the best ❤️</h3>
                 <div class="reasons-list">
                     <div class="reason-item">1. Your incredible smile.</div>
-                    <div class="reason-item">2. How you always know how to make me laugh.</div>
+                    <div class="reason-item">2. You are the mostt beautiful inside and out.</div>
                     <div class="reason-item">3. The way you care for everyone around you.</div>
+                    <div class="reason-item">4. Your infectious laughter.</div>
+                    <div class="reason-item">5. Your presence makes everything better.</div>
+                    <div class="reason-item">6. You are the funniest person ever.</div>
+                    <div class="reason-item">7. You are sooooo creative and imaginative.</div>
+                    <div class="reason-item">8. You are the best friend ever.</div>
+                    <div class="reason-item">9. You lighten up every room you enter.</div>
+                    <div class="reason-item">10. You inspire me to be a better person.</div>
+                    <div class="reason-item">11. You are the beautiful soul I adore.</div>
+                    <div class="reason-item">12. Your hugs are the warmest and coziest.</div>
+                    <div class="reason-item">13. You are the bestest daughter.</div>
+                    <div class="reason-item">14. You are the most talented person I know.</div>
+                    <div class="reason-item">15. You are soon gonna achieve everything you dream of.</div>
+                    <div class="reason-item">16. You have literally the best dressing sense.</div>
+                    <div class="reason-item">17. Your voice is wowwwwwwwww.</div>
+                    <div class="reason-item">18. You are my favourite tennis buddy.</div>
+                    <div class="reason-item">19. Time spent with you is my favourite.</div>
+                    <div class="reason-item">20. You are sooooooo prettyyy.</div>
+                    <div class="reason-item">21. You are my sunshine on a cloudy day.</div>
                     <div class="reason-item">22. Because you are simply you.</div>
                 </div>
             </div>
